server/template/main/template.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: An AWS CloudFormation template for setting up an MC server living inside of AWS

Parameters:
  AppName:
    Description: "Name of the App to logically collect resources"
    Type: String
    Default: McServer
  
  MinecraftImage:
    Description: "Name of the image for the MC server"
    Type: String
  
Resources:
  ECSCluster:
    Type: AWS::ECS::Cluster
    Properties:
      ClusterName: mc-server-cluster
      Tags: 
        - Key: AppName
          Value: !Ref AppName

  FileSystem:
    Type: AWS::EFS::FileSystem
    Properties:
      BackupPolicy:
        Status: ENABLED
      ThroughputMode: elastic

  TaskExecutionRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: mc-server-execution-role
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ecs-tasks.amazonaws.com
            Action:
              - sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy
      Tags:
        - Key: AppName
          Value: !Ref AppName

  TaskRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: mc-server-task-role
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ecs-tasks.amazonaws.com
            Action:
              - sts:AssumeRole
      Tags:
        - Key: AppName
          Value: !Ref AppName

  MinecraftLogGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: /ecs/minecraft
      RetentionInDays: 7
      Tags:
        - Key: AppName
          Value: !Ref AppName

  TaskDefinition:
    Type: AWS::ECS::TaskDefinition
    Properties:
      Cpu: "2048"
      Memory: "4096"
      Family: "mc-server"
      NetworkMode: awsvpc
      RequiresCompatibilities: 
        - FARGATE
      ExecutionRoleArn: !GetAtt TaskExecutionRole.Arn
      TaskRoleArn: !GetAtt TaskRole.Arn
      ContainerDefinitions: 
        - Name: minecraft
          Image: !Ref MinecraftImage
          Essential: true
          PortMappings:
            - ContainerPort: 25565
              HostPort: 25565
              Protocol: tcp
          Environment:
            - Name: EULA
              Value: "TRUE"
            - Name: TYPE
              Value: "PAPER"
            - Name: VERSION
              Value: "LATEST"
            - Name: DIFFICULTY
              Value: "normal"
            - Name: MODE
              Value: survival
            - Name: MEMORY
              Value: "3G"
            - Name: ENABLE_AUTOSTOP
              Value: "TRUE"
            - Name: AUTOSTOP_TIMEOUT_EST
              Value: "60"
            - Name: AUTOSTOP_TIMEOUT_INIT
              Value: "20"
          MountPoints:
            - SourceVolume: minecraft-data
              ContainerPath: /data
              ReadOnly: false
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group: /ecs/minecraft
              awslogs-region: ap-southeast-2
              awslogs-stream-prefix: minecraft
      Volumes:
        - Name: minecraft-data
          EFSVolumeConfiguration:
            FilesystemId: !Ref FileSystem
            RootDirectory: "/"
            TransitEncryption: ENABLED
      Tags: 
        - Key: AppName
          Value: !Ref AppName

  ServerVpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags: 
        - Key: AppName
          Value: !Ref AppName

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags: 
        - Key: AppName
          Value: !Ref AppName

  AttachInternetGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref ServerVpc
      InternetGatewayId: !Ref InternetGateway
        
  PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref ServerVpc
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: true
      AvailabilityZone: ap-southeast-2a
      Tags:
        - Key: AppName
          Value: !Ref AppName

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref ServerVpc
      Tags:
      - Key: AppName
        Value: !Ref AppName

  InternetRoute:
    Type: AWS::EC2::Route
    DependsOn: AttachInternetGateway
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  SubnetRouteAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet
      RouteTableId: !Ref PublicRouteTable

  TaskSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow Minecraft traffic into ECS task
      VpcId: !Ref ServerVpc
      SecurityGroupIngress:
        - Description: Minecraft Java Edition
          IpProtocol: tcp
          FromPort: 25565
          ToPort: 25565
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - Description: Allow all outbound traffic
          IpProtocol: "-1"
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: AppName
          Value: !Ref AppName

  EFSSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow ECS tasks to mount EFS
      VpcId: !Ref ServerVpc
      SecurityGroupIngress:
        - Description: NFS from ECS tasks
          IpProtocol: tcp
          FromPort: 2049
          ToPort: 2049
          SourceSecurityGroupId: !Ref TaskSecurityGroup
      SecurityGroupEgress:
        - Description: Allow outbound
          IpProtocol: "-1"
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: AppName
          Value: !Ref AppName

  FileSystemMountTarget:
    Type: AWS::EFS::MountTarget
    Properties:
      FileSystemId: !Ref FileSystem
      SubnetId: !Ref PublicSubnet
      SecurityGroups:
        - !Ref EFSSecurityGroup

Outputs:
  ClusterName:
    Value: !Ref ECSCluster
  SubnetId:
    Value: !Ref PublicSubnet
  SecurityGroupId:
    Value: !Ref TaskSecurityGroup
  EfsFileSystemId:
    Value: !Ref FileSystem
